# RETINA

./: .env.example  .gitignore  BGAD_IMPLEMENTATION.md  BGAD_QUICK_START.md  CASCADE_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CRON_SETUP.md  DATASET_GUIDE.md  FASTAPI_INTEGRATION.md  GPT4V_FASTAPI_INTEGRATION.md  GPT4V_IMPLEMENTATION_SUMMARY.md  GPT4V_INTEGRATION.md  QUICKSTART_GPT4V.md  README.md  STEP3_FINAL_SUMMARY.md  STEP3_INTEGRATION_COMPLETE.md  demo.ipynb  docker-compose.yml  efficientad.ipynb  merge_datasets.py  patchcore.ipynb  requirements.txt  test_bgad_fit_predict.py  test_cascade_router.py
Supervised_Models/BGAD/datasets/: mvtec.py
Supervised_Models/Custom_Model_Push_Pull/src/: data.py  training.py  utils.py  visuals.py
Unsupervised_Models/AdaCLIP/custom_adaclip/: main.py
Unsupervised_Models/AdaCLIP/custom_adaclip/results/v21/: config_backup_20250807_161700.yaml
Unsupervised_Models/AdaCLIP/custom_adaclip/src/: evaluator.py  model_loader.py  trainer.py
Unsupervised_Models/PaDiM/: training.py
Unsupervised_Models/WinCLIP/: setup_winclip.py
Unsupervised_Models/configs/: config_patchcore.yaml
api/: main.py  requirements.txt
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs  models.rs  pool.rs
backend/src/models/: image.rs  job.rs  label.rs  mod.rs  result.rs
backend/src/routes/: anomaly.rs  auth.rs  health.rs  images.rs  labels.rs  mod.rs  system.rs
backend/src/services/: alerts.rs  image_storage.rs  mod.rs  redis.rs
docs/: fastapi_revival_plan.md  integration_plan.md  vlm_router_design.md
docs/archive/: BGAD_CODE_REFERENCE.md  BGAD_COMPLETION_SUMMARY.md  CASCADE_INTEGRATION_TESTS.md  CASCADE_ROUTER_GUIDE.md  CASCADE_TO_ANNOTATION_GUIDE.md  GPT4V_ARCHITECTURE_DIAGRAMS.md  GPT4V_DELIVERY_CHECKLIST.md  GPT4V_QUICK_REFERENCE.md  NIGHTLY_RETRAIN_README.md  audit-2026-04-20.md  target-structure-2026-04-20.md
examples/: gpt4v_example.py
framework/: README.md
framework/back_end/: pyproject.toml  requirements.txt
framework/back_end/alembic/: env.py
framework/back_end/alembic/versions/: 0bd796cff007_create_users_table.py  ede674635cf9_initial_migration.py  f5c2b11862ba_initial_test_db.py
framework/back_end/app/: activeLearningClient.py  create_user.py  main.py  worker.py  worker_loop.py
framework/back_end/app/api/: deps.py
framework/back_end/app/api/routers/: anomalyController.py  anomalyService.py  auth.py  learningController.py  learningService.py  supervisedAnomalyService.py  supervisedClassificationService.py  unsupervisedAnomalyService.py
framework/back_end/app/core/: alerts.py  buffer.py  config.py  redis.py  security.py
framework/back_end/app/db/: models.py  session.py
framework/back_end/app/models/unsupervised/PaDim/: training.py
framework/back_end/app/models/unsupervised/PatchCore/: training.py
framework/back_end/app/models/unsupervised/WinCLIP/: setup_winclip.py
framework/back_end/app/models/unsupervised/configs/: config_padim.yaml  config_patchcore.yaml  config_winclip.yaml
framework/back_end/app/models/unsupervised/output/padim/export/: padim.yaml
framework/back_end/app/models/unsupervised/output/patchcore/export/: patchcore.yaml
framework/back_end/app/schemas/: payloads.py  user.py
framework/back_end/app_al/: activeLearningService.py
framework/front_end/: 0_Home.py  Dockerfile  client.py  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh
framework/front_end/.streamlit/: config.toml  secrets.toml
framework/front_end/pages/: 1_Prediction_Page.py  2_Expert_Review_Page.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/label/: page.tsx
frontend/src/app/model-performance/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/submit/: page.tsx
frontend/src/components/: AnomalyScoreBar.tsx  Badge.tsx  Card.tsx  ErrorBanner.tsx  GlassCard.tsx  HeatmapOverlay.tsx  LoadingSkeleton.tsx  NavHeader.tsx  SectionHeader.tsx  StatusCard.tsx
frontend/src/lib/: api.ts  taxonomies.ts
legacy/fastapi_backend/: __init__.py  app.py
legacy/fastapi_backend/services/: __init__.py  labeling.py  pipeline.py
notebooks/: efficientad_fixed.ipynb  patchcore.ipynb
research/: README.md
research/supervised/Custom_Model_Push_Pull/: main.py
research/supervised/Custom_Model_Push_Pull/config/: config.yaml
research/supervised/Custom_Model_Push_Pull/outputs/: dataset_info.json
research/supervised/Custom_Model_Push_Pull/src/: models.py
research/unsupervised/: unsupervisedAnomalyService.py
research/unsupervised/AdaCLIP/: AdaCLIP_on_Decospan.ipynb  tools.py
research/unsupervised/AdaCLIP/custom_adaclip/config/: config.yaml  config_decospan.yaml
research/unsupervised/AdaCLIP/custom_adaclip/results/v21/detected_anomalies/: analysis.txt
research/unsupervised/AdaCLIP/custom_adaclip/src/: __init__.py  data_loader.py  inference.py  utils.py  visualizer.py
research/unsupervised/PatchCore/: training.py
research/unsupervised/configs/: config_padim.yaml  config_winclip.yaml
results/: mvtec_stage1_results.csv
scripts/: eval_anomalib.py  evaluate_model.py  fast_local_train.py  nightly_retrain.py  preflight_check.py  run_api.sh  submit_job.py  test_patchcore_registry.py  test_vlm_router.py  train_all_mvtec.sh  train_anomalib.py  validate_dataset.py  verify_bgad_weights.py  watch_results.py
shared/schemas/: job.json  label.json  result.json
src/backend/: app.py  config.py
src/backend/services/: __init__.py  inference.py  labeling.py
worker/: Dockerfile  pyproject.toml
worker/src/retina_worker/: __init__.py  config.py  main.py  redis_client.py  schemas.py  worker.py  worker_dual.py
worker/src/retina_worker/models/: __init__.py  base.py  factory.py  patchcore_registry.py  patchcore_stub.py  pushpull_stub.py  vlm_router.py  winclip_stub.py
