[package]
name = "retina-backend"
version = "0.1.0"
edition = "2021"
description = "Backend API for RETINA multi-stage visual anomaly detection system"
license = "MIT"
#
# This backend serves as the orchestration layer:
# - REST API for frontend communication
# - Job queue management via Redis Streams
# - Active learning state tracking
# - System health monitoring
#
# NOTE: ML inference is delegated to Python workers via Redis
# =============================================================================

[dependencies]
# -----------------------------------------------------------------------------
# Web Framework
# -----------------------------------------------------------------------------
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# -----------------------------------------------------------------------------
# Serialization
# -----------------------------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# -----------------------------------------------------------------------------
# Redis (async client for job queues and state)
# -----------------------------------------------------------------------------
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# -----------------------------------------------------------------------------
# Database (PostgreSQL with SQLx - matching professor's framework)
# -----------------------------------------------------------------------------
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

# -----------------------------------------------------------------------------
# Authentication (JWT + password hashing)
# -----------------------------------------------------------------------------
jsonwebtoken = "9"
argon2 = "0.5"

# -----------------------------------------------------------------------------
# Utilities
# -----------------------------------------------------------------------------
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# -----------------------------------------------------------------------------
# Observability
# -----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# -----------------------------------------------------------------------------
# Configuration
# -----------------------------------------------------------------------------
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
