# =============================================================================
# RETINA ML Worker - Project Configuration
# =============================================================================
#
# Python package for the ML inference worker that processes anomaly detection
# jobs from the Redis queue.
#
# Current Status:
# - Model inference uses deterministic stubs for testing
# - Real model integration via Anomalib framework
# - Push-pull contrastive learning for Stage 2
#
# =============================================================================

[project]
name = "retina-worker"
version = "0.1.0"
description = "ML inference worker for the RETINA multi-stage anomaly detection system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = []
keywords = ["anomaly-detection", "machine-learning", "active-learning", "industrial-inspection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
# Core dependencies for the worker. ML model dependencies (torch, anomalib)
# are listed but may need adjustment based on the target deployment environment.
# -----------------------------------------------------------------------------
dependencies = [
    # Redis client for job queue consumption
    "redis>=5.0.0",
    
    # Data validation and settings management
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Image processing
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    
    # HTTP client (for callbacks and health checks)
    "httpx>=0.27.0",
    
    # Structured logging
    "structlog>=24.0.0",
    
    # Environment variable loading
    "python-dotenv>=1.0.0",
]

# -----------------------------------------------------------------------------
# Optional Dependencies
# -----------------------------------------------------------------------------
# ML frameworks are optional to allow lightweight testing and development.
# In production, these would be required for actual model inference.
# -----------------------------------------------------------------------------
[project.optional-dependencies]
ml = [
    # PyTorch for model inference
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # Anomalib for pretrained anomaly detection models
    # Note: Anomalib integration is planned but not yet implemented
    # "anomalib>=1.0.0",
    
    # CLIP for zero-shot detection (WinCLIP)
    # "open-clip-torch>=2.20.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
retina-worker = "retina_worker.main:main"

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retina_worker"]

# -----------------------------------------------------------------------------
# Tool Configurations
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
