[project]
name = "mv4qc-back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.3",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0", # redis-py (includes asyncio support)
    "python-multipart>=0.0.9", # required for UploadFile form-data
    "requests>=2.32",
    "anomalib[vlm-clip]>=2.1.0",
    "python-jose[cryptography]>=3.3.0", # JWT
    "passlib[bcrypt]>=1.7.4", # password hashing
    "pillow>=10.3", # PIL
    "python-dateutil>=2.9", # (Optional but common) better date parsing, etc.
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "open-clip-torch>=3.1.0",
]


[project.optional-dependencies]
inference = [
    "torch==2.3.*",        # choose cpu/cuda build as needed
    "torchvision==0.18.*", # match torch version
    "torchaudio==2.3.*",   #optional
    "anomalib>=1.0.0 ",    # provides TorchInferencer
    "openvino>=2024.4",    # if you use OpenVINO runtime; optional
]

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true
